# Codex-rAthena-2025

./: .gitignore  CMakeLists.txt  CODEX_DIFFS_APPLY_REPORT.md  CODEX_DIFFS_SCAN_REPORT.md  DIFFS_AUDIT_REPORT.md  DIFFS_IMPLEMENTATION_REPORT.md  apply_codex_diffs.py
Codex diffs/: Battleground-EasyCore-21-24 [OK].patch  ExtendedVending-v4 [OK].patch  MobEleView [OK].patch  MonsterChampion [OK].patch  Overkill [OK].patch  PartyBuff+ShowPartySP [OK].patch
Codex diffs/Battleground-EasyCore-21-24 [OK]/: Battleground-EasyCore-21-24 [OK].patch
Codex diffs/Bonus-bPartySynergy [OK]/: How to Install.txt
Codex diffs/Campfire/: README.md
Codex diffs/Campfire [OK]/: README.md
Codex diffs/Custom drops mapflag/: README.md
Codex diffs/ExtendedVending-v4 [OK]/: ExtendedVending-v4 [OK].patch  README.md
Codex diffs/MF_BLOOD_TAX [OK]/: README.md
Codex diffs/MobEleView [OK]/: MobEleView [OK].patch  README.md
Codex diffs/PartyBuff+ShowPartySP [OK]/: PartyBuff+ShowPartySP [OK].patch
Codex diffs/bonus_party_synergy/: bonus_party_synergy.diff
Codex diffs/friendly_fire_system/: bfriendlyfire_bonus.diff
conf/: atcommands.yml  battle_athena.conf  char_athena.conf  inter_athena.conf  login_athena.conf  maps_athena.conf
conf/battle/: battleground.conf  drops.conf  feature.conf  misc.conf  monster.conf  party.conf  pet.conf
conf/import-tmpl/: battle_extended_vending.conf
conf/mapflag/: no_mercy.conf
conf/msg_conf/: map_msg.conf  map_msg_por.conf
db/: battleground_db.yml  item_db.yml  map_index.txt  mapflag_mobdrop.yml  mob_db.yml  readme.md
db/import-tmpl/: battleground_db_ex.yml  map_index.txt  status.yml  (+3 more)
diffs/: MIGRATION_NOTES.md
doc/: battleground-rev24-client-bundle-manifest.md  battleground-rev24-deployment.md  battleground-rev24-migration-matrix.md  battleground-rev24-parity-checklist.md  extended_vending_v4.md  item_bonus.txt
npc/: scripts_custom.conf
sql-files/: main.sql
src/map/: CMakeLists.txt  achievement.cpp  atcommand.cpp  battle.cpp  battle.hpp  battleground.cpp  battleground.hpp  chrif.cpp  clif.cpp  clif.hpp  intif.cpp  map-server-generator.vcxproj  map-server-generator.vcxproj.filters  map-server.vcxproj  map.cpp  map.hpp  mob.cpp  mob.hpp  npc.cpp  packets_struct.hpp  party.cpp  party.hpp  pc.cpp  pc.hpp  script.cpp  script.hpp  script_constants.hpp  skill.cpp  skill.hpp  skill_animation.cpp  status.cpp  status.hpp  vending.cpp  vending.hpp
src/map/skills/merchant/: skill_vending.cpp
(+110 files in other folders)
